# Ice_OfflineRL_Workbench

./: .gitignore  AGENTS.md  README.md  pyproject.toml
documents/: minari environments list.md  minari list.txt  minari one-room-S8 mission.txt  minari one-room-S8.txt  minigrid env分析.docx  minigrid_env_variables.md  minigrid_render_call_tree.md  minigrid_step_call_tree.md  minigrid註解版.py  離線強化學習中動作空間約束與狀態修正的聯合學習.docx
documents/d3rl/: Agent.md  MDPDataset vs Episode 分析.md  ReplayBuffer分析.md  d3rlpy_data分析.md
documents/d4rl/: mujoco-v2
documents/minari/: minari environments list.md
documents/minigrid/: minigrid_render_call_tree.md
documents/result/: README.md  agent_dataset_versions.csv  agent_file_versions.csv  base.csv  generate_result_quick_tables.py  hybrid_random.csv  noise_action.csv  noise_init.csv  noise_state.csv  remaining_experiments.md  stability_aspl.csv  stability_scas.csv  stability_scaspl.csv  stability_scc.csv  stability_td3bc.csv
documents/rl/: AC.md  maximum _entropy.md
reference/ASPL_source/: run_experiment.sh
scripts/: __init__.py  _boxplot.py  _config.py  _eval.py  _eval_linux.py  _evals.py  _plot.py  _plot_linux.py  _probe.py  _return.py  _returns.py  _skip.py  _table.py  _test copy.py  _test.py  _train copy.py  _train linux.py  _train.py  _train_linux.py  _train_model.py  _train_windows.py  _view.py  compare_render_modes.py  test_all.py  test_dynamic.py  test_dynamic_outlier.py  trains.py
scripts/RL process/: _test_method_load.py  _test_method_save.py  retrain_agent_collect.py  test_Q_table_modeled.py  test_Q_table_modeled_collect.py  test_agent_collect.py  train_Q_table.py  train_Q_table_collect.py  train_agent.py  (+6 more)
source/: 1. test_module.py  2. test_fourrooms.py  __init__.py  compare_render_modes.py  test_render_delay.py  test_trail_delay.py
(+948 files in other folders)
