[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ice-offline-rl-workbench"
version = "0.1.0"
description = "Offline RL workbench"
requires-python = ">=3.10,<3.13"

dependencies = [
    "numpy<2",
    "torch>=2.5",
    "gymnasium",
    "minari",
    "minigrid",
    "h5py",
    "matplotlib",
    "PySide6",
]

[tool.setuptools]
package-dir = {"" = "source"}

[tool.setuptools.packages.find]
where = ["source"]
include = ["ice_offline*"]